# weather_app

./: README.md
client/: package-lock.json  package.json
client/src/: App.css  App.jsx  config.json
client/src/components/: Header.jsx  Main.jsx  WeatherBlock.jsx  WeatherComponent.jsx
client/src/data/: codes.json
client/src/proxy/: proxy.js
client/src/utilities/: fetch.js  generateSrc.js
server/: .gitignore  CMakeLists.txt  main.cc  requestHandler.cc  requestHandler.h
server/services/weatherService/: weather.cpp  weather.h
